--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
+<RelativeLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    >
+
+
+<android.support.design.widget.CoordinatorLayout
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 
 
 
@@ -50,8 +57,10 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_profile"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_marginLeft="51dp"
                 app:layout_collapseMode="pin"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:layout_collapseParallaxMultiplier="0.6"
                 >
 
@@ -64,104 +73,67 @@
 
 
 
-
     </android.support.design.widget.AppBarLayout>
-
-
 
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-
-        <android.support.v7.widget.CardView
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            app:cardElevation="8dp"
-            app:contentPadding="16dp"
-            >
+            android:layout_height="wrap_content">
 
-        <!--<TextView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text ="@string/test"-->
-            <!--/>-->
 
-            <LinearLayout
-                android:orientation="horizontal"
+            <include
+                layout="@layout/rating_card"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <LinearLayout
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:src="@android:drawable/star_on"
-                        android:layout_gravity="center"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:layout_gravity="center"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/app_name"
-                        android:gravity="center"
-                        />
+                android:layout_height="wrap_content" />
 
 
-                </LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:layout_height="match_parent"
+                android:id="@+id/topTrips"
+                android:layout_width="match_parent"
+                android:scrollbars="vertical"
+                />
 
-                <LinearLayout
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:src="@android:drawable/star_on"
-                        android:layout_gravity="center"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:layout_gravity="center"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/app_name"
-                        android:gravity="center"
-                        />
-
-
-                </LinearLayout>
-
-
-            </LinearLayout>
-
-
-
-        </android.support.v7.widget.CardView>
-
+        </LinearLayout>
 
 
     </android.support.v4.widget.NestedScrollView>
 
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_height="match_parent"
-        android:id="@+id/topTrips"
-        android:layout_width="match_parent"
-        android:scrollbars="vertical"
-        />
+
+
+
+
+
+
+
+    <!--<android.support.v4.widget.NestedScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
+
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
+
+
+
+
+        <!--</LinearLayout>-->
+
+
+
+
+
+    <!--</android.support.v4.widget.NestedScrollView>-->
+
 
 
     <!--<android.support.v4.widget.NestedScrollView-->
@@ -177,7 +149,35 @@
     <!--</android.support.v4.widget.NestedScrollView>-->
 
 
-
-
-
 </android.support.design.widget.CoordinatorLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center_vertical" >
+
+        <ImageButton
+            android:id="@+id/back_button"
+            android:layout_alignParentStart="true"
+            android:onClick="onClick"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxHeight="48dp"
+            android:minWidth="48dp"
+            android:maxWidth="48dp"
+            android:minHeight="48dp"
+            android:layout_margin="6dp"
+            android:backgroundTint="@color/colorAccent"
+            android:background="@drawable/ic_arrow_back_white_48dp"
+            />
+
+    </RelativeLayout>
+
+
+
+
+
+
+
+</RelativeLayout>
