--- a/app/src/main/res/layout/trip_feed_card.xml
+++ b/app/src/main/res/layout/trip_feed_card.xml
@@ -8,14 +8,17 @@
     android:layout_margin="5dp">
 
     <RelativeLayout
+        android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
         android:focusable="true"
         android:background="?android:attr/selectableItemBackground">
+
+
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/card_image"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:lottie_fileName="star.json"
             app:lottie_loop="true"
@@ -24,34 +27,132 @@
 
         <TextView
             android:id="@+id/card_title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:background="#ffffff"
             android:text="Trip Name"
-            android:gravity="center_horizontal"
+            android:gravity="left"
             android:textColor="@android:color/black"
-            android:textSize="20sp"
-            android:layout_toEndOf="@id/card_image" />
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/card_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Description"
+            android:gravity="center_vertical"
+            android:textSize="14dp"
+            android:layout_below="@id/card_title"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp"/>
+
+
         <TextView
             android:id="@+id/card_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="User Name"
-            android:gravity="center_horizontal"
+            android:gravity="right"
             android:textSize="14dp"
-            android:layout_below="@id/card_title"
+            android:layout_alignParentEnd="true"
             android:layout_marginTop="10dp"
+            android:layout_below="@id/card_description"
             android:layout_marginLeft="5dp"/>
+
+
         <TextView
-            android:id="@+id/card_description"
-            android:layout_width="match_parent"
+            android:id="@+id/star"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Description"
-            android:gravity="center_vertical"
-            android:textSize="14dp"
-            android:layout_below="@id/card_name"
+            android:gravity="left"
+            android:text="&#xf006;"
+            android:textSize="34dp"
+            android:layout_margin="20dp"
+            android:layout_alignParentStart="true"
             android:layout_marginTop="10dp"
+            android:layout_below="@id/card_description"
             android:layout_marginLeft="5dp"/>
+
+        <TextView
+            android:id="@+id/fork"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="&#xf126;"
+            android:gravity="left"
+            android:textSize="34dp"
+            android:layout_toRightOf="@id/star"
+            android:layout_margin="20dp"
+            android:layout_marginTop="10dp"
+
+            android:layout_below="@id/card_description"
+            android:layout_marginLeft="5dp"/>
+
+        <LinearLayout
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal"
+            android:id="@+id/nstars"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:layout_marginRight="6dp"
+                android:src="@drawable/images"
+                />
+
+            <TextView
+                android:id="@+id/no_of_forks"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="300"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal"
+            android:id="@+id/nforks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:layout_toLeftOf="@id/nstars"
+            android:layout_alignParentTop="true"
+
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:layout_marginRight="6dp"
+                android:src="@drawable/images"
+                />
+
+            <TextView
+                android:id="@+id/no_of_stars"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="4,000"
+                />
+
+        </LinearLayout>
+
+
+
+
+
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
