--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -23,6 +23,12 @@
                 android:id="@+id/feeds_type_spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" />
+            <ProgressBar
+                android:id="@+id/progress_bar_feeds"
+                style="?android:progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/cardList"
                 android:layout_width="match_parent"
