--- a/app/src/main/res/layout/activity_view_trip_time_line.xml
+++ b/app/src/main/res/layout/activity_view_trip_time_line.xml
@@ -11,6 +11,7 @@
         android:id="@+id/timeline"
         android:divider="@null"
         android:clickable="false"
+        android:listSelector="@android:color/transparent"
         android:dividerHeight="0dp"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="0dp"
