--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--CONTAINER FOR ACTIVITIES IN NAVIGATION-->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/coordinator_feeds"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="io.github.chaitya62.tripsharr.HomeActivity"
     tools:showIn="@layout/app_bar_home">
@@ -35,6 +36,7 @@
             </android.support.v4.widget.SwipeRefreshLayout>
         </LinearLayout>
     </FrameLayout>
+    
 
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
