--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,10 +13,6 @@
 
 
 
-
-
-
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
@@ -42,11 +38,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_gravity="start"
-                android:contentDescription="TEST IMAGE"
+                android:contentDescription="profile picture"
                 android:scaleType="centerCrop"
-                android:src="@drawable/images"
+                android:src="@drawable/com_facebook_profile_picture_blank_portrait"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.4"
+                app:layout_collapseParallaxMultiplier="0.3"
 
                 app:paddingStart="@dimen/activity_vertical_margin" />
 
@@ -91,6 +87,17 @@
                 layout="@layout/rating_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
+            <ProgressBar
+                android:id="@+id/progressBar1"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="40dp"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+
+                />
 
 
             <android.support.v7.widget.RecyclerView
@@ -157,20 +164,21 @@
         android:layout_alignParentTop="true"
         android:layout_gravity="center_vertical" >
 
-        <ImageButton
+        <TextView
             android:id="@+id/back_button"
-            android:layout_alignParentStart="true"
             android:onClick="onClick"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxHeight="48dp"
-            android:minWidth="48dp"
-            android:maxWidth="48dp"
-            android:minHeight="48dp"
-            android:layout_margin="6dp"
+            android:layout_height="match_parent"
             android:backgroundTint="@color/colorAccent"
-            android:background="@drawable/ic_arrow_back_white_48dp"
-            />
+            android:text="@string/back_arrow"
+            android:textSize="25sp"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:textStyle="normal"
+            android:textColor="@color/colorAccent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
 
     </RelativeLayout>
 
