--- a/app/src/main/res/layout/ongoing_trips_list_view.xml
+++ b/app/src/main/res/layout/ongoing_trips_list_view.xml
@@ -8,7 +8,8 @@
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
     android:clickable="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/ll_listitem">
 
     <TextView
         android:id="@+id/tripname1"
