--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#32cb00</color>
-    <color name="colorPrimaryDark">#FFFFFF</color>
-    <color name="colorAccent">#1b1b1b</color>
+    <color name="colorPrimary">#ffab00</color>
+    <color name="colorPrimaryDark">#ff8100</color>
+    <color name="colorAccent">#ffdd4b</color>
     <color name="colorWhite">#1b1b1b</color>
+    <color name="colorLightText">#e4e4e4</color>
     <color name="list_item_selected_state">#928e8e</color>
-    <color name="list_item_normal_state">#FFFFFF</color>
+    <color name="list_item_normal_state">#ff8100</color>
+    <color name="polyline_color">#70b0ff</color>
+    <color name="transparent">#00000000</color>
+    <color name="arrow_color">#0038ff</color>
 </resources>
