--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,19 +2,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:padding="50dp"
+    android:background="#ffffff"
     >
 
     <ImageView
+        android:id="@+id/plane"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/com_facebook_profile_picture_blank_portrait"
+        android:src="@drawable/plane"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="45dp" />
+        android:layout_marginTop="35dp" />
+
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:text="@string/app_name"
+        android:gravity="center"
+        android:textSize="45sp"
+        android:textStyle=""
+        android:layout_below="@id/plane"/>
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
         style="@style/FacebookLoginButton"
+        android:padding="10dp"
         android:text="@string/facebook_login_string"
         android:drawableStart="@drawable/fb_button"
         android:textColor="#ffffff"
