--- a/app/src/main/res/layout/trip_feed_card.xml
+++ b/app/src/main/res/layout/trip_feed_card.xml
@@ -28,6 +28,7 @@
             android:background="#ffffff"
             android:text="Trip Name"
             android:gravity="left"
+            android:clickable="true"
             android:textColor="@android:color/black"
             android:textSize="20sp" />
         <TextView
@@ -61,7 +62,7 @@
             android:layout_height="wrap_content"
             android:gravity="left"
             android:text="&#xf006;"
-            android:textSize="34dp"
+            android:textSize="30sp"
             android:layout_margin="20dp"
             android:layout_alignParentStart="true"
             android:layout_marginTop="10dp"
@@ -74,7 +75,7 @@
             android:layout_height="wrap_content"
             android:text="&#xf126;"
             android:gravity="left"
-            android:textSize="34dp"
+            android:textSize="30sp"
             android:layout_toRightOf="@id/star"
             android:layout_margin="20dp"
             android:layout_marginTop="10dp"
