--- a/app/src/main/res/layout/activity_media_collection.xml
+++ b/app/src/main/res/layout/activity_media_collection.xml
@@ -39,6 +39,17 @@
         android:layout_marginTop="30dp"
         android:layout_below="@+id/my_toolbar2"
         android:id="@+id/imgpre"/>
+    <!--
+    <GridView
+        android:id="@+id/ImageGrid"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:columnWidth="90dp"
+        android:gravity="center"
+        android:horizontalSpacing="10dp"
+        android:numColumns="auto_fit"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="10dp" />-->
 
     <ProgressBar
         android:id="@+id/progressBar3"
