--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -162,6 +162,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentTop="true"
+
         android:layout_gravity="center_vertical" >
 
         <TextView
@@ -169,13 +170,15 @@
             android:onClick="onClick"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:backgroundTint="#000000"
+            android:backgroundTint="@color/colorAccent"
+            android:shadowColor="@color/colorAccent"
+            android:shadowRadius="6"
             android:text="@string/back_arrow"
             android:textSize="25sp"
             android:gravity="center_vertical"
             android:layout_marginLeft="20dp"
             android:textStyle="normal"
-            android:textColor="@color/colorAccent"
+            android:textColor="#000000"
             android:layout_alignParentBottom="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true" />
