--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:id="@+id/coordinator_fragment2"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
@@ -10,4 +11,4 @@
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:id="@+id/textView"/>
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
