--- a/app/src/main/res/layout/activity_trip_info.xml
+++ b/app/src/main/res/layout/activity_trip_info.xml
@@ -18,12 +18,12 @@
     <ImageView
         android:id="@+id/media_display"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_gravity="start"
         android:contentDescription="TEST IMAGE"
         android:scaleType="centerCrop"
-        android:src="@drawable/images" />
+        android:src="@drawable/plane" />
 
     <LinearLayout
         android:padding= "10dp"
