--- a/app/src/main/res/layout/loading.xml
+++ b/app/src/main/res/layout/loading.xml
@@ -3,25 +3,40 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ProgressBar
-        android:id="@+id/progressBar2"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="160dp" />
 
-    <TextView
-        android:id="@+id/textView2"
+
+    <!--<TextView-->
+        <!--android:id="@+id/textView2"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_above="@+id/progressBar2"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginBottom="49dp"-->
+        <!--android:textAlignment="center"-->
+        <!--android:textAllCaps="true"-->
+        <!--android:textColor="@color/colorPrimary"-->
+        <!--android:contentDescription="@string/loading"-->
+        <!--android:text="@string/loading" />-->
+
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/progressBar2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="49dp"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textColor="@color/colorPrimary"
-        android:contentDescription="@string/loading"
-        android:text="@string/loading" />
+        android:src="@drawable/logo"
+        android:gravity="center"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="15dp"
+
+        />
+
+
+
+    <!--<ProgressBar-->
+        <!--android:id="@+id/progressBar2"-->
+        <!--style="?android:attr/progressBarStyle"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_marginBottom="160dp" />-->
+
 </RelativeLayout>
