--- a/app/src/main/res/layout/activity_trip_info.xml
+++ b/app/src/main/res/layout/activity_trip_info.xml
@@ -18,7 +18,7 @@
     <ImageView
         android:id="@+id/media_display"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="276dp"
         android:layout_alignParentStart="true"
         android:layout_gravity="start"
         android:contentDescription="TEST IMAGE"
