--- a/app/src/main/res/layout/activity_add_checkpoint.xml
+++ b/app/src/main/res/layout/activity_add_checkpoint.xml
@@ -112,6 +112,7 @@
 
     </LinearLayout>
 
+    <!--
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -139,7 +140,7 @@
             android:onClick="Update"
             android:id="@+id/ivmedia"/>
 
-    </LinearLayout>
+    </LinearLayout>-->
 
 
 </RelativeLayout>
